--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
+aiofiles==23.1.0
+aiogram==3.1.1
+aiohttp==3.8.6
+aiosignal==1.3.1
+annotated-types==0.6.0
+async-timeout==4.0.3
 attrs==23.1.0
 certifi==2023.7.22
 cffi==1.16.0
+charset-normalizer==3.3.2
 exceptiongroup==1.1.3
+frozenlist==1.4.0
 h11==0.14.0
 idna==3.4
+magic-filter==1.0.12
+multidict==6.0.4
 numpy==1.26.1
 outcome==1.3.0.post0
 pandas==2.1.2
 prettytable==3.9.0
 pycparser==2.21
+pydantic==2.3.0
+pydantic_core==2.6.3
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
@@ -18,7 +30,9 @@ sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.2
 trio-websocket==0.11.1
+typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.7
 wcwidth==0.2.9
 wsproto==1.2.0
+yarl==1.9.2
