Небольшие добавления и фиксы
1)Добавлены новые переменные в конфиг
2)Исправлена проблема с запуском на линуксе

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,11 @@ TOKEN_BOT =
 # Если нужно добавить несколько задаем их через запятую
 # Пример:  CHAT_ID = 437215563, 127215563, 637214563
 CHAT_ID = 
-# Путь к chromedriver.exe для использования в selenium
+# Путь к chromedriver.exe для использования Selenium
 # Если запускаем в windows, то в качестве разделителей используем "\\",
 # если на Linux, то "//"
 WEB_DRIVER_PATH = 
+# Операционная ситсема, на которой запускается скрипт Windows/Linux
+OPERATING_SYSTEM = Windows
+# Время паузы (sleep) (в секундах) между парсингом (для windows оптимально 5, для linux 10)
+TIME_PAUSE = 5
